fix some things

--- a/module_11/10_apostrophes.html
+++ b/module_11/10_apostrophes.html
@@ -195,7 +195,9 @@
               <div class="card-block">
               	<p>While the use of apostrophes to form contractions is relatively familiar to most post-secondary students, using apostrophes to indicate ownership or possession can become complicated.</p>
               	<p>The basic concept is fairly straightforward: For singular nouns, use an apostrophe and the letter s to indicate possession.</p> 
+              	
               	<div><strong>placeholder for circles</strong></div>
+              	
               	<p>The use of possessive apostrophes becomes more complicated, however, when there are multiple owners / possessors.</p>
               	<div class="row mt-3 mb-3">
 					<!--Card Primary-->
@@ -262,6 +264,27 @@
             <div aria-labelledby="headingThree" class="collapse" id="collapseThree" role="tabpanel">
               <div class="card-block">
               	<p>Another common apostrophe mistake involves using a possessive apostrophe with certain pronouns. English features eight possessive pronouns that don’t require an apostrophe to indicate possession — in fact, these words are used exclusively to indicate possession and have no other role in the language. </p>
+              	<h3>Possessive Pronouns</h3>
+              	<div class="col col-sm-12">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <div id="item1">
+                        <div class="row">
+                          <div class="col-sm-8">
+                            <h4>Are not</h4>
+                          </div>
+                          <div class="col-sm-2">
+                            <button class="btn btn-clear btn-lg ml-2 mt-0" id="itembtn1" onclick="item2"><i class="fas fa-arrow-right fa-2x flex-center"></i><span class=
+                            "sr-only">Next</span></button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col col-sm-6" id="2">
+                      <h4>Aren’t</h4>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
