--- a/module_12/06_integrating_reference.html
+++ b/module_12/06_integrating_reference.html
@@ -62,7 +62,7 @@
 				<li style="list-style: disc;">After getting tattooed, the main thing you need to keep in mind is taking care of it during the healing process.</li>
 			</ul>
 			
-			<p><strong>Match the type of information or evidence that would best support each point and the best source to find that evidence.</strong></p>
+			<p><strong>Match the type of information or evidence that would best support<i class="fal fa-cubes fa-lg text-second pl-1"></i> each point and the best source<i class="fal fa-pencil fa-lg text-second pl-1"></i> to find that evidence.</strong></p>
 			
 			<!-- Start of Activity -->
 			<section id="dbox" class="animated fadeInUpBig mt-4"></section>
