--- a/module_12/11_eval.html
+++ b/module_12/11_eval.html
@@ -68,9 +68,9 @@
 				<div class="col col-sm-12 z-depth-1 p-4" id="directions">
 					<h2 class="text-prime">Directions</h2>
 					<ol>
-				        <p><span class="circle-number accent-2 pull-left mr-2 mt-1" >1</span>Review the outline template from <a href="">insert quicklink to topic: Organizing Your Research<i class="far fa fa-external-link" aria-hidden="true"></i></a></p>
+				        <p><span class="circle-number accent-2 pull-left mr-2 mt-1" >1</span>Review the outline template from <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=159769&amp;type=content&amp;rcode=Conestoga-1318734" target="_self"> Organizing Your Research<i class="far fa fa-external-link" aria-hidden="true"></i></a></p>
 						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">2</span>Think about how your ideas would fit most effectively into the template, remembering that you can have more than three main points if your topic requires.</p>
-						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">3</span>Fill out the outline <a href="">insert quicklink to topic: Organizing Your Research<i class="far fa fa-external-link" aria-hidden="true"></i></a> with your ideas and supporting research – that is, the sources you will use as support in each section
+						<p><span class="circle-number accent-2 pull-left mr-2 mt-1">3</span>Fill out the outline <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=159769&amp;type=content&amp;rcode=Conestoga-1318734" target="_self"> Organizing Your Research<i class="far fa fa-external-link" aria-hidden="true"></i></a> with your ideas and supporting research – that is, the sources you will use as support in each section
 						<ul>
 						<li>Only your thesis statement needs to be a complete sentence at this point. The rest of the outline can be filled in with key phrases that make your ideas and organization clear. Save your paragraphs for the first draft.</li>
 						<li>Use 12-point Arial font.</li>
