--- a/module_12/06_integrating_reference.html
+++ b/module_12/06_integrating_reference.html
@@ -55,14 +55,14 @@
 			</ul>
 			<p>In this way, not all text references are equally effective within the context of your research. Think about the appropriateness of each source and whether it will help your reader to understand or agree with you (depending on your purpose).</p>
 			<h3>Activity: Knowledge Check on Best Resources</h3> 
-			<p>Image that you are writing a paper that attempts to answer the question: “What should people consider before getting a tattoo?” You have identified three points that require support from text references:</p>
+			<p>Imagine that you are writing a paper that attempts to answer the question: “What should people consider before getting a tattoo?” You have identified three points that require support from text references:</p>
 			<ul style="list-style: disc;">
 				<li style="list-style: disc;">Pick a design that has special meaning in your life. But be careful: One could choose an image or quote that they end up regretting.</li>
 				<li style="list-style: disc;">It’s crucial that you ensure the tattoo shop you visit is licensed and sanitary. You don’t want to run the risk of getting an infection, which is more likely if the facility isn’t properly run.</li>
 				<li style="list-style: disc;">After getting tattooed, the main thing you need to keep in mind is taking care of it during the healing process.</li>
 			</ul>
 			
-			<p><strong>Match the type of information or evidence that would best support<i class="fal fa-cubes fa-lg text-second pl-1"></i> each point and the best source<i class="fal fa-pencil fa-lg text-second pl-1"></i> to find that evidence.</strong></p>
+			<p><strong>Match the type of information or evidence that would best support<i class="fal fa-cubes fa-lg text-second pl-1"></i> each point and the best source<i class="fal fa-puzzle-piece fa-lg text-second pl-1"></i> to find that evidence.</strong></p>
 			
 			<!-- Start of Activity -->
 			<section id="dbox" class="animated fadeInUpBig mt-4"></section>
