--- a/module_10/02_reason_for_doing_research.html
+++ b/module_10/02_reason_for_doing_research.html
@@ -177,13 +177,13 @@
         
       </div>
       <div class="clearfix"> </div>
-        <div class="row">
+        <div class="row mt-3">
           <div class="col-sm-6"> 
             
             <!--Card Light-->
             <div class="card"> 
               <!--Card image-->
-              <div class="view overlay hm-white-slight"> <img src="images/girl-on-phone.jpg" class="img-fluid" alt=""> <a>
+              <div class="view overlay hm-white-slight"> <img src="images/reflection_02.jpg" class="img-fluid" alt=""> <a>
                 <div class="mask waves-effect waves-light"></div>
                 </a> </div>
               <!--/.Card image--> 
@@ -201,8 +201,6 @@
             <form>
               <textarea style="width: 100%; height: 280px;" id="feedbacktext" name="feedbacktext" value="Type your reflection..."></textarea>
               <button type="submit" id="feedbacksubmit" class="btn accent-4 small-two pull-right" data-toggle="tab"><strong>Save</strong></button>
-              <p>You can return to this page and edit your response at any time by selecting <strong>Save</strong>. When you're done, you can view your reflection in the <a href="" target="_blank">Ten-Word Autobiography<br/>
-                discussion topic <i class="fa fa-comments-o" aria-hidden="true"></i></a>.</p>
               <div id="feedbackconfirm" class="inline-feedback-confirm"></div>
             </form>
           </div>
