--- a/module_11/09_colons_semi-colons.html
+++ b/module_11/09_colons_semi-colons.html
@@ -65,7 +65,7 @@
         </div>
         </div>
         <h3>Semi-colon</h3>
-        <p>“Semi-colons separate things. Most commonly, they separate two main clauses that are closely related to each other but that could stand on their own as sentences if you wanted them to.” (Mignon Fogarty aka Grammar Girl, Semi-colons, <a href="http://www.quickanddirtytips.com/education/grammar/semicolons">“Use semi-colons to separate things and add variety”)</a></p>
+        <p>“Semi-colons separate things. Most commonly, they separate two main clauses that are closely related to each other but that could stand on their own as sentences if you wanted them to.” (Mignon Fogarty aka Grammar Girl, Semi-colons, <a href="http://www.quickanddirtytips.com/education/grammar/semicolons" target="_blank">“Use semi-colons to separate things and add variety”)</a></p>
         <div class="row">
         <div class="col-sm-10 card prime-bg text-white p-3" style="margin: auto;">
         <ul style="list-style: none;">
@@ -90,8 +90,8 @@
        <div class="clearfix mt-5"></div>
         <div class="citation mt-5">
           <p><strong>Reference:</strong><br/>
-           Unattributed Authors. (2011). 3.2: Semicolons. <a href="http://open.lib.umn.edu/writingforsuccess/chapter/3-2-semicolons/"><em>Writing for Success</em></a>. University of Minnesota Libraries Publishing. (CC BY-NC-SA).<br>
-           Unattributed Authors. (2011). 3.3: Colons. <a href="http://open.lib.umn.edu/writingforsuccess/chapter/3-3-colons/"><em>Writing for Success</em></a>. University of Minnesota Libraries Publishing. (CC BY-NC-SA).</p>
+           Unattributed Authors. (2011). 3.2: Semicolons. <a href="http://open.lib.umn.edu/writingforsuccess/chapter/3-2-semicolons/" target="_blank"><em>Writing for Success</em></a>. University of Minnesota Libraries Publishing. (CC BY-NC-SA).<br>
+           Unattributed Authors. (2011). 3.3: Colons. <a href="http://open.lib.umn.edu/writingforsuccess/chapter/3-3-colons/" target="_blank"><em>Writing for Success</em></a>. University of Minnesota Libraries Publishing. (CC BY-NC-SA).</p>
         </div>
       </div>
     </div>
