--- a/module_12/03_outline_research.html
+++ b/module_12/03_outline_research.html
@@ -230,11 +230,11 @@
       <!--/.Accordion wrapper-->
        <div class="citation mt-5">
 		<p><strong>References:</strong><br>
-          CBC. (1994). The Doughnut: Canada’s Unofficial National Sugary Snack. Retrieved March 24, 2017, from <a href="http://www.cbc.ca/archives/entry/the-doughnut-unofficial-national-sugary-snack">http://www.cbc.ca/archives/entry/the-doughnut-unofficial-national-sugary-snack</a><br>
+          CBC. (1994). The Doughnut: Canada’s Unofficial National Sugary Snack. Retrieved March 24, 2017, from <a href="http://www.cbc.ca/archives/entry/the-doughnut-unofficial-national-sugary-snack" target="_blank">http://www.cbc.ca/archives/entry/the-doughnut-unofficial-national-sugary-snack</a><br>
           CBC. (2016). Let the Doughnut Wars Begin: Krispy Kreme Cooks Up Canadian Comeback. Retrieved March 24, 2017, from General Reference Centre Gold database.<br>
-          Harris, R. (2016, June 7). Krispy Kreme Readies for Major Canadian Expansion. Marketing. Retrieved March 26, 2017, from <a href="http://www.marketingmag.ca/brands/krispy-kreme-readies-for-major-canadian-expansion-176157">http://www.marketingmag.ca/brands/krispy-kreme-readies-for-major-canadian-expansion-176157</a><br>
-          Martin, R. (2016, Jan 26). The 10 Most Influential Brands in Canada: Ipsos. Marketing Magazine. Retrieved March 25, 2017, from: <a href="http://www.marketingmag.ca/brands/the-10-most-influential-brands-in-canada-ipsos-165968">http://www.marketingmag.ca/brands/the-10-most-influential-brands-in-canada-ipsos-165968</a><br>
-          Shaw, H. (2016, May 29). Krispy Kreme Rolling Out a Canadian Comeback. Financial Post. Retrieved March 24, 2017, from <a href="http://business.financialpost.com/news/retail-marketing/krispy-kreme-stages-a-canadian-comeback">http://business.financialpost.com/news/retail-marketing/krispy-kreme-stages-a-canadian-comeback</a><br>
+          Harris, R. (2016, June 7). Krispy Kreme Readies for Major Canadian Expansion. Marketing. Retrieved March 26, 2017, from <a href="http://www.marketingmag.ca/brands/krispy-kreme-readies-for-major-canadian-expansion-176157" target="_blank">http://www.marketingmag.ca/brands/krispy-kreme-readies-for-major-canadian-expansion-176157</a><br>
+          Martin, R. (2016, Jan 26). The 10 Most Influential Brands in Canada: Ipsos. Marketing Magazine. Retrieved March 25, 2017, from: <a href="http://www.marketingmag.ca/brands/the-10-most-influential-brands-in-canada-ipsos-165968" target="_blank">http://www.marketingmag.ca/brands/the-10-most-influential-brands-in-canada-ipsos-165968</a><br>
+          Shaw, H. (2016, May 29). Krispy Kreme Rolling Out a Canadian Comeback. Financial Post. Retrieved March 24, 2017, from <a href="http://business.financialpost.com/news/retail-marketing/krispy-kreme-stages-a-canadian-comeback" target="_blank">http://business.financialpost.com/news/retail-marketing/krispy-kreme-stages-a-canadian-comeback</a><br>
           Wright, L. (2017, June 1). Krispy Kreme Back to Wreak Sweet Revenge. Toronto Star. Retrieved March 24, 2017, from Canadian Points of View Reference Centre database</p>
 	   </div>
    </div>
