--- a/module_10/06_refine_your_research.html
+++ b/module_10/06_refine_your_research.html
@@ -46,12 +46,11 @@
         <p>Your brainstorm has likely helped you to explore your interests and identify a specific focus. However, before you proceed with this week’s assignment (the proposal), you should check that your research question is appropriately constructed.</p>
         <p>Last week we learned that research questions need to have an appropriate scope if the project is going to be successful. This video explains how to define a research question.</p>
 
-           <div class="bottom-space">
-          <div id="vpcontain">
-            <div id="vidpreview"></div>
-            <div id="ytplayer"></div>
-          </div>
-        </div>
+           <div class="col col-xs-12 col-md-8 no-gutters mb-2" style="margin: auto;">
+			  <div class="well no-gutters p-1 z-depth-1">
+				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/tlrcFDh443g?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
+			  </div>
+		   </div>
               <p class="mt-2">If your research question requires you to consider too much information, your research will take too long and you will struggle to include everything in a paper of this length. Such a research question would be <strong>too broad</strong>: “Why do people drive electric cars?”</p>
               <p>At the same time, if the focus of your question is too specific, it can limit your research options and you might struggle to produce the length and depth expected in this assignment. Such a research question would be <strong>too narrow</strong>: “How many Ontario drivers prefer electric cars over other types of cars because they like how they look?”</p>
               <p>Here are some other research question pitfalls to avoid:<ul>
@@ -211,12 +210,7 @@
 <!-- OLC Custom JS --> 
 <script src="../js/plugins/olc-custom.js"></script>
 
-<script src="../facilitator_tools/VideoPlus/js/videoplusEngine.js"></script> 
-<script type="text/javascript">
-		$(document).ready(function() {
-	    	VideoPlusApp.setupApp("data/video_research_question.json");
-		});
-</script>
+<!--inline quiz-->
 <script src="https://s.brightspace.com/lib/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="thirdpartylib/jquery/jquery-1.11.0.min.js"><\/script>')</script>
 <script src="../facilitator_tools/Quiz/js/quiz.js"></script>
