--- a/module_09/14_evaluating_sources_with_CARS_alt.html
+++ b/module_09/14_evaluating_sources_with_CARS_alt.html
@@ -44,11 +44,10 @@
       <div class="col-sm-12 content">
         <h1>Evaluating Sources with the CARS Tool</h1>
         <p>There are a number of criteria that can be used to evaluate the quality and credibility of a source of information. One popular method for remembering the various characteristics to look for is the CARS evaluation system.</p>
-        <p><em>Click on the next button below or use this <a href="14_evaluating_sources_with_CARS_alt.html" title="link to printable version of Evaluating Sources with the CARS Tool topic">printable version</a>.</em></p>
-
-		<div class="col-sm-12 top-md mt-3" style="min-height: 600px;">
-          <div id="dnext"></div>
-        </div>
+        <h3>Credibility</h3><p>Look for believable, well written information that is free of bias. Locate information about the author(s) and their credentials. How credible are the authors, what is their level of expertise on this particular topic?</p>
+        <h3>Accuracy</h3><p>The information should be up-to-date and clear. You can confirm accuracy by locating information from a variety of sources. Look for a last updated date.</p>
+        <h3>Relevance</h3><p>The information should contribute to your knowledge on the topic you are researching. It should support your thesis/research question or offer a substantial counter point. It should be written at a level appropriate for inclusion in your research. If a source is too academic it may use unknown terminology and discuss topics that are too advanced for your level of study. If a source is too popular or too basic, it may not be academic or professional enough to be of value for your purposes.</p>
+		<h3>Support</h3><p>Other sources should support the information found. Always look for a reference list, bibliography or citations demonstrating where the information came from.</p>
        
         <p>Use this system with the checklist in the next topic page to rank the following three sources from most reliable to least. Use all the information provided in the reference to track down and evaluate the source.</p>
         <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
