--- a/module_11/10_apostrophes.html
+++ b/module_11/10_apostrophes.html
@@ -490,9 +490,9 @@
   window.jQuery || document.write('<script src="../facilitator_tools/Multiselect/thirdpartylib/jquery/jquery-1.11.0.min.js"><\/script>')
 </script>
 
-<script src="../facilitator_tools/Multi-input/js/multi-input.js"></script>
+<script src="../facilitator_tools/Multi-input/js/multi-input_conflict.js"></script>
 <script>
-  var datafilename = "multi-input_apostrophes.json";
+  var datafilename_multi_input = "multi-input_apostrophes.json";
 </script>
 
 <script>
