fix diagram conflict

--- a/module_10/04_finding_appropriate_focus.html
+++ b/module_10/04_finding_appropriate_focus.html
@@ -111,8 +111,8 @@
 </script>
 
 <script>
-	var datafilename = "diagramnext_appropriate_focus.json";
+	var datafilename2 = "diagramnext_appropriate_focus.json";
 </script> 
-<script src="../facilitator_tools/DiagramNext/js/diagramnext.js"></script> 
+<script src="../facilitator_tools/DiagramNext/js/diagramnext_alt.js"></script> 
 </body>
 </html>
