--- a/module_09/04_models_for_self-reflection.html
+++ b/module_09/04_models_for_self-reflection.html
@@ -21,8 +21,10 @@
 
   <!-- Your custom styles (optional) -->
   <link href="../css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="../facilitator_tools/Multi-Dropdown/css/multi-dropdown.css">
+  <link rel="stylesheet" href="../facilitator_tools/Multi-Dropdown/css/multi-dropdown-multi.css">
   <link rel="stylesheet" href="../facilitator_tools/DiagramNext/css/diagramnext.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.4/css/buttons.dataTables.min.css">
 </head>
 
 <body>
@@ -67,23 +69,14 @@
               <div class="col-sm-12 top-md mt-3" style="min-height: 500px;">
 				  <div id="dnext"></div>
 			  </div>
-              <h2>Knowledge Check</h2>
+              <h2><i class="fal fa-question-circle fa-lg text-second fa-pull-left"></i>Knowledge Check</h2>
 			  <p><strong>Identify where each of the following questions would belong in the “What? So what? Now what?” model?</strong></p>
 			  <h3>Answer Options:</h3>
 			  <p><span class="badge accent-3" style="margin-right: 5px;">A</span> What?<br>
 				<span class="badge accent-3" style="margin-right: 5px;">B</span> So what?<br>
 				<span class="badge accent-3" style="margin-right: 5px;">C</span> Now what?</p>
 			  <div class="clearfix"></div>
-			  <div class="row">
-				<button class="btn btn-large prime-bg btn-check" id="submit-all" onclick="resetAll()">Reset Activity</button>
-				<table id="mi-table" class="table">
-				  <tr>
-					<th id="column-question">Question</th>
-					<th id="column-input">Phase</th>
-					<th id="column-feedback">Feedback</th>
-					<th id="column-feedbackicon"></th>
-				  </tr>
-				</table>
+			  <div class="row" id="dropdown1">
 			  </div>
             </div>
           </div>
@@ -98,6 +91,8 @@
               <div class="col-sm-12 top-md mt-3" style="min-height: 500px;">
 				  <div id="dnext2"></div>
 			  </div>
+              <p>Which of the 6 question words (who, what, where, when, why and how) is likely to require the most interpretation and reflection? Why? Enter your answer in the text box below.</p>
+              <h2>INSERT WORDCLOUD</h2>
           </div>
             </div>
           </div>
@@ -110,6 +105,12 @@
               <p>Seidel and Blythe (as cited in Write Online, n.d.) created a model called “the compass.” This model encourages you to look in four “directions” as you reflect on a particular event or project. For a summary ( ) of what these four “directions” signify, click each title.</p>
               <div class="col-sm-12 top-md mt-3" style="min-height: 500px;">
 				  <div id="dnext3"></div>
+			  </div>
+           <div class="clearfix"></div>
+            <h2><i class="fal fa-question-circle fa-lg text-second fa-pull-left"></i>Knowledge Check</h2>
+			  <p><strong>Answer the following questions about the Compass reflection model.</strong></p>
+			  <h3>Answer Options:</h3>
+			  <div class="row" id="dropdown2">
 			  </div>
             </div>
             </div>
@@ -124,18 +125,59 @@
               <div class="col-sm-12 top-md mt-3" style="min-height: 500px;">
 				  <div id="dnext4"></div>
 			  </div>
+          <h2><i class="fal fa-question-circle fa-lg text-second fa-pull-left"></i>Knowledge Check</h2>
+			  <p><strong>Place the following five questions in the appropriate place along this learning hierarchy.</strong></p>
+			  <h3>Answer Options:</h3>
+			  <p><span class="badge accent-3" style="margin-right: 5px;">A</span> Remembering<br>
+				<span class="badge accent-3" style="margin-right: 5px;">B</span> Understanding<br>
+				<span class="badge accent-3" style="margin-right: 5px;">C</span> Analyzing<br>
+				<span class="badge accent-3" style="margin-right: 5px;">D</span> Evaluating<br>
+				<span class="badge accent-3" style="margin-right: 5px;">E</span> Creating</p>
+           <div class="clearfix"></div>
+			  <div class="row" id="dropdown3">
+			  </div>
             </div>
             </div>
           </div>
         </div>
         <!--/.Accordion wrapper-->
         <div class="clearfix"></div>
+        <h4 class="mt-4">Now it’s your turn</h4>
+        <div class="row">
+          <div class="col-sm-6"> 
+            
+            <!--Card Light-->
+            <div class="card"> 
+              <!--Card image-->
+              <div class="view overlay hm-white-slight"> <img src="images/04_reflection.jpg" class="img-fluid" alt=""> <a>
+                <div class="mask waves-effect waves-light"></div>
+                </a> </div>
+              <!--/.Card image--> 
+              <!--Card content-->
+              <div class="card-block p-3"> 
+                <!--Text-->
+                <p>What model do you plan to use for this week’s assignment to reflect on feedback from a previous assignment in this course? Will this model be useful for you in other courses and for your future role as a professional?</p>
+              </div>
+              <!--/.Card content--> 
+            </div>
+            <!--/.Card Light--> 
+            
+          </div>
+          <div id="inlinefeedback" class="col-sm-6 inline-feedback" style="display:none;">
+            <form>
+              <textarea style="width: 100%; height: 280px;" id="feedbacktext" name="feedbacktext" value="Type your reflection..."></textarea>
+              <button type="submit" id="feedbacksubmit" class="btn accent-4 small-two pull-right" data-toggle="tab"><strong>Save</strong></button>
+              <div id="feedbackconfirm" class="inline-feedback-confirm"></div>
+            </form>
+          </div>
+		</div>
+        <div class="clearfix"></div>
         <div class="citation mt-5">
 		<p><strong>References:</strong><br>
           Borton, T. (1970) <em>Reach, Touch and Teach.</em> New York: McGraw-Hill Paperbacks.<br>
           Brockbank, A., & McGill, I. (1998). <em>Facilitating Reflective Learning in Higher Education.</em> London, England: Society for Research into Higher Education.<br>
-          Write Online. (n.d.). <em>Reflective Writing.</em> Retrieved September 29, 2017.<br>
-          University of Waterloo. (n.d.). <em>Reflection Framework and Prompts.</em> Retrieved September 29, 2017.</p></div>
+          Write Online. (n.d.). <a href="http://writeonline.ca/reflective-essay.php?content=section2" target="_blank"><em>Reflective Writing.</em></a> Retrieved September 29, 2017.<br>
+          University of Waterloo. (n.d.). <a href="https://uwaterloo.ca/centre-for-teaching-excellence/resources/reflection-framework-and-prompts#examples" target="_blank"><em>Reflection Framework and Prompts.</em></a> Retrieved September 29, 2017.</p></div>
     </div>
   </div>
 </main>
@@ -171,7 +213,7 @@
 <script src="../js/plugins/olc-custom.js"></script>
 
 <!-- Multi-Select Dropdown--> 
-<script src="../facilitator_tools/Multi-Dropdown/js/multi-dropdown.js"></script> 
+<script src="../facilitator_tools/Multi-Dropdown/js/multi-dropdown-multi.js"></script> 
 <script>
 	var datafilepath = "data/models_for_self-reflection_drop.json";
 </script>
@@ -188,6 +230,15 @@
     heightMatch("resources","tips");
   });
 </script>
+<!-- Inline Reflection JS --> 
+<script src="../facilitator_tools/Reflection/assets/thirdpartylib/valence/global-superagent-d2l-session-auth.min.js"></script> 
+<script src="../facilitator_tools/Reflection/assets/thirdpartylib/valence/csval-lib.js"></script> 
+<!-- Custom JS --> 
+<script src="../facilitator_tools/Reflection/assets/js/main.min.js"></script> 
+<script src="../facilitator_tools/Reflection/assets/js/inline-feedback.js"></script>
+<noscript>
+This activity will only load in an online environment with JavaScript enabled.
+</noscript> 
 
 <!-- Move to bottom with scripts -->
 
