--- a/module_07/22_summary.html
+++ b/module_07/22_summary.html
@@ -26,7 +26,7 @@
       <div class="col-xs-12 col-sm-12">
 				<div class="view hm-black-light"> <img src="images/summary.jpg" class="img-fluid" alt=""><div class="mask"></div> </div>
        <div class="col-xs-12 col-sm-12 col-md-4 accent-4 summary-title z-depth-1 animated slideInLeft">
-					<p class="heading animated fadeIn black-text">Introduction to Research</p>
+					<p class="heading animated fadeIn black-text">Persuasive Writing — Part 2</p>
          <hr class="accent-3" />
 				</div>
         <div class="col-xs-12 col-sm-12 col-md-8 summary z-depth-1 animated slideInRight bg-white">
