--- a/module_09/12_preparing_to_search.html
+++ b/module_09/12_preparing_to_search.html
@@ -72,7 +72,8 @@
           	  <p>Imagine this scenario:<br>
           	  You’ve been asked to write a research paper on a topic of your own choosing. You’re in your first year of supply chain management, so you know it should be related to that field in some way, but beyond that you’re not quite sure what direction you want to pursue.</p>
           	  <p>So you enter the keywords “Supply Chain Management” in the Library Search tool, and this is the result:</p>
-          	  
+          	  <img class="img-fluid" src="images/screen shot 1.png" alt="screen shot 1 for result">
+          	  <img class="img-fluid mb-4" src="images/screen shot 2.png" alt="screen shot 2 for result">
             </div>
           </div>
         </div>
@@ -82,7 +83,7 @@
           </div>
           <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="card-block">
-              <p>Watch this video and answer the question at the end of the video.</p>
+              <p>Watch this video and answer the question below.</p>
               <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
 			    <div class="well no-gutters p-1 z-depth-1">
 				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/Cu_N3cTdeAQ?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
@@ -97,11 +98,23 @@
           </div>
           <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="card-block">
-              <p>Watch this video and answer the question at the end of the video.</p>
+              <p>Watch this video and answer the question below.</p>
               <div class="col col-xs-12 col-md-7 no-gutters mb-4" style="margin: auto;">
 			    <div class="well no-gutters p-1 z-depth-1">
 				  <iframe width="100%" height="315" src="https://www.youtube.com/embed/I7L9HclPhws?rel=0" class="flex" frameborder="0" allowfullscreen></iframe>
 				</div>
+			  </div>
+            </div>
+            </div>
+          </div>
+          <div class="card hoverable">
+          <div class="card-header" role="tab" id="headingFour"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            <h2 class="mb-0 p-3"> <i class="fal fa-question-circle text-second pr-2" aria-hidden="true"></i> Knowledge Check   <i class="fa fa-angle-down rotate-icon"></i></h2></a>
+          </div>
+          <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour">
+            <div class="card-block">
+              <div class="card-block">
+              <section id="dbox"></section>
 			  </div>
             </div>
             </div>
@@ -112,10 +125,10 @@
         <div class="clearfix"></div>
         <div class="citation mt-5">
 		<p><strong>References:</strong><br>
-          Conestoga College Library Resource Centre. (2017, June 20). <a href="https://www.youtube.com/watch?v=tlrcFDh443g&feature=youtu.be"><em>Preparing – Defining a Research Question and Doing Background Research (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
-          Conestoga College Library Resource Centre. (2017, May 5). <a href="https://www.youtube.com/watch?v=Cu_N3cTdeAQ&feature=youtu.be"><em>Choosing Keywords and Brainstorming (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
-          Conestoga College Library Resource Centre. (2017, June 29). <a href="https://www.youtube.com/watch?v=I7L9HclPhws&feature=youtu.be"><em>Finding Databases – Part 2 – The Benefits of Searching Databases.</em></a> [Video file]. Retrieved September 29, 2017.<br>
-          Conestoga College Library Resource Centre. (2014, October 27). <a href="https://www.youtube.com/watch?v=x29CWA-uXdA&feature=youtu.be"><em>Preparing – Types of Resources, Part 2: Websites.</em></a> [Video file]. Retrieved September 29, 2017.</p></div>
+          Conestoga College Library Resource Centre. (2017, June 20). <a href="https://www.youtube.com/watch?v=tlrcFDh443g&feature=youtu.be" target="_blank"><em>Preparing – Defining a Research Question and Doing Background Research (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
+          Conestoga College Library Resource Centre. (2017, May 5). <a href="https://www.youtube.com/watch?v=Cu_N3cTdeAQ&feature=youtu.be" target="_blank"><em>Choosing Keywords and Brainstorming (2017).</em></a> [Video file]. Retrieved September 29, 2017.<br>
+          Conestoga College Library Resource Centre. (2017, June 29). <a href="https://www.youtube.com/watch?v=I7L9HclPhws&feature=youtu.be" target="_blank"><em>Finding Databases – Part 2 – The Benefits of Searching Databases.</em></a> [Video file]. Retrieved September 29, 2017.<br>
+          Conestoga College Library Resource Centre. (2014, October 27). <a href="https://www.youtube.com/watch?v=x29CWA-uXdA&feature=youtu.be" target="_blank"><em>Preparing – Types of Resources, Part 2: Websites.</em></a> [Video file]. Retrieved September 29, 2017.</p></div>
     </div>
 </main>
 <!-- /Main Content Area -->
@@ -149,26 +162,11 @@
 <!-- OLC Custom JS -->
 <script src="../js/plugins/olc-custom.js"></script>
 
-<script>
-  window.jQuery || document.write('<script src="../facilitator_tools/Multiselect/thirdpartylib/jquery/jquery-1.11.0.min.js"><\/script>')
-</script>
 
-<script src="../facilitator_tools/Multi-input/js/multi-input.js"></script>
-<script>
-  var datafilename = "multi-input_access_library.json";
-</script>
-<script src="../facilitator_tools/VideoPlus/js/videoplusEngine.js"></script> 
-<script type="text/javascript">
-		$(document).ready(function() {
-	    	VideoPlusApp.setupApp("data/video_variety_resource.json");
-		});
-</script>
-<script src="https://s.brightspace.com/lib/jquery/1.11.0/jquery.min.js"></script>
-      <script>window.jQuery || document.write('<script src="thirdpartylib/jquery/jquery-1.11.0.min.js"><\/script>')</script>
-      <script src="../facilitator_tools/Quiz/js/quiz.js"></script>
+<script src="../facilitator_tools/Quiz/js/quiz.js"></script>
    	<script>
    		$(document).ready(function() {
-   			InlineQuizApp.setupQuiz("data/quiz-data_key_area_library.json", "dbox")
+   			InlineQuizApp.setupQuiz("data/quiz-data_preparing_to_search.json", "dbox")
    		});
    	</script>
 <noscript>
