insert link in week 5

--- a/module_11/03_proposal_question.html
+++ b/module_11/03_proposal_question.html
@@ -49,7 +49,7 @@
       	<li>Presents your position as an idea that can be challenged and/or needs to be defended</li>
       	<li>Presents your position in clear and specific language </li>
       </ul></p>
-      <p>You may wish to review <a href="">insert quicklink to topic page Thesis Statements</a> in week 5.</p>
+      <p>You may wish to review <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=159769&amp;type=content&amp;rcode=Conestoga-1320481" target="_self"> Thesis Statements</a> in week 5.</p>
       <p>Below you’ll find five thesis statements produced by previous COMM1085 students. For each one, identify the research question that the thesis statement best answers.</p>
       <div class="clearfix"></div>
      <div id="json-activity-box"></div>
