--- a/module_12/08_intro_conclude.html
+++ b/module_12/08_intro_conclude.html
@@ -51,7 +51,7 @@
         		<li>Reasons to care or be concerned about the topic or problem being addressed</li>
         	</ul>
         </p>
-        <p>Optional: Review our first exploration of introductory paragraphs in Week 5: <a href="">insert quicklink to topic: Introductory Paragraphs</a></p>
+        <p>Optional: Review our first exploration of introductory paragraphs in Week 5: <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=159769&amp;type=content&amp;rcode=Conestoga-1319965" target="_self"> Introductory Paragraphs</a></p>
         <p>Review the following student examples of an outline for an introductory paragraph. Notice how the student plans to draw in the reader.</p>
         <!--Card Primary-->
         <div class="card accent-4 z-depth-2 p-3 mb-3">
@@ -111,7 +111,7 @@
         		<li>What problems still remain? What questions still need to be answered?</li>
         	</ul>
         </p>
-        <p>Optional: Review our first exploration of concluding paragraphs in Week 5: <a href="">insert quicklink to topic: Concluding Paragraphs</a></p>
+        <p>Optional: Review our first exploration of concluding paragraphs in Week 5: <a href="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=159769&amp;type=content&amp;rcode=Conestoga-1328377" target="_self"> Concluding Paragraphs</a></p>
         <p>Review the following student examples of an outline for a concluding section. Notice how the student leaves the reader with coming trends.</p>
         <!--/.Card Primary-->
         <div class="card second-bg text-white z-depth-2 p-3">
